tests/fail/semantics/native_state_requires_kira_owned_type/main.kira
@FFI.Struct { layout: c; }
struct CState {
    var count: Int
}

@Main
function entry() {
    var state = nativeState(CState { count: 0 })
    return
}
